Fix bug where invisible fullscreen tooltip prevents pass-through clicks

--- a/client/layout/pages/room/_player.scss
+++ b/client/layout/pages/room/_player.scss
@@ -178,13 +178,15 @@
     padding: 15px;
     width: 300px;
     opacity: 0;
-    transition: opacity 0.2s;
+    visibility: hidden;
+    transition: visibility 0s linear 0.2s, opacity 0.2s;
     border-radius: 10px;
     text-align: center;
     line-height: 1.5;
 
     &.show {
         opacity: 1;
+        transition: visibility 0s linear 0s, opacity 0.2s;
     }
 }
 
